src/test/deca/syntax/valid/synt/class_declarations.deca
/*
    Description: Test sur la déclaration de plusieurs classes

    Résultat : OK
*/
class A{
}
class B{
}
class C{
}
{
}
