src/test/deca/syntax/invalid/synt/class_protected_visibility.deca
/*
    Description: Test sur la déclaration d'une classe avec la visibilité protected

    Résultat : erreur syntaxique
*/
protected class C{
}
// @expected_output deca:6:0
